--- a/backend-orii/pom.xml
+++ b/backend-orii/pom.xml
@@ -85,6 +85,16 @@
 			<scope>provided</scope> 
 		</dependency>
 
+
+		<!-- H2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
