--- a/backend-orii/pom.xml
+++ b/backend-orii/pom.xml
@@ -120,6 +120,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.10.0</version>
+                 <configuration>
+                <!-- No fallar el build por advertencias -->
+                <failOnError>false</failOnError>
+                
+                <!-- Suprimir advertencias específicas -->
+                <additionalJOption>
+                    -Xdoclint:none
+                </additionalJOption>
+            </configuration>
             </plugin>
         </plugins>
     </build>
